@@ -1,5 +1,5 @@
 
-The Loki Game Installer 1.0
+The Loki Game Installer 1.1
 Written by Sam Lantinga and Stephane Peter
 ------------------------------------------
 
