@@ -1,10 +1,11 @@
-/* $Id: main.c,v 1.9 1999-11-30 05:30:53 hercules Exp $ */
+/* $Id: main.c,v 1.10 1999-11-30 21:34:43 hercules Exp $ */
 
 #include <stdio.h>
 #include <setjmp.h>
 #include <signal.h>
 #include <getopt.h>
 #include <stdlib.h>
+#include <unistd.h>
 
 #include "install.h"
 #include "install_ui.h"
@@ -45,13 +46,13 @@ static void print_usage(const char *argv0)
   printf("Usage: %s [options]\n\n"
 		 "Options can be one or more of the following:\n"
 		 "   -h       Display this help message\n"
+         "   -c cwd   Use an alternate current directory for the install\n"
 		 "   -f file  Use an alternative XML file (default " SETUP_CONFIG ")\n"
 		 "   -n       Force the text-only user interface\n"
 		 "   -r root  Set the root directory for extracting RPM files (default is /)\n"
 		 "   -v n     Set verbosity level to n. Available values :\n"
 		 "            0: Debug  1: Quiet  2: Normal 3: Warnings 4: Fatal\n",
 		 argv0);
-  exit(0);
 }
 
 /* The main installer code */
@@ -66,34 +67,39 @@ int main(int argc, char **argv)
 	int log_level = LOG_NORMAL;
 
 	/* Parse the command-line options */
-	while((c=getopt(argc, argv, "hnf:r:v::")) != EOF){
-	  switch(c){
-	  case 'h':
-		print_usage(argv[0]);
-		break;
-	  case 'f':
-		xml_file = optarg;
-		break;
-	  case 'n':
-		force_console = 1;
-		break;
-	  case 'r':
-		rpm_root = optarg;
-		break;
-	  case 'v':
-		if(optarg){
-		  log_level = atoi(optarg);
-		  if(log_level<LOG_DEBUG || log_level>LOG_FATAL){
-			fprintf(stderr,"Out of range value, setting verbosity level to normal.\n");
-			log_level = LOG_NORMAL;
-		  }
-		}else
-		  log_level = LOG_DEBUG;
-		break;
-	  case '?':
-		print_usage(argv[0]);
-		break;
-	  }
+	while ( (c=getopt(argc, argv, "hnc:f:r:v::")) != EOF ) {
+	    switch (c) {
+	        case 'c':
+		        if ( chdir(optarg) < 0 ) {
+                    perror(optarg);
+                    exit(-1);
+                }
+		        break;
+	        case 'f':
+		        xml_file = optarg;
+		        break;
+	        case 'n':
+		        force_console = 1;
+		        break;
+	        case 'r':
+		        rpm_root = optarg;
+		        break;
+	        case 'v':
+		        if ( optarg ) {
+		            log_level = atoi(optarg);
+		            if ( (log_level < LOG_DEBUG) || (log_level > LOG_FATAL) ){
+			            fprintf(stderr,
+                    "Out of range value, setting verbosity level to normal.\n");
+			            log_level = LOG_NORMAL;
+		            }
+		        } else {
+		            log_level = LOG_DEBUG;
+                }
+		        break;
+	        default:
+		        print_usage(argv[0]);
+                exit(0);
+        }
 	}
 
     /* Initialize the XML setup configuration */
