@@ -4,6 +4,7 @@ SOL -	Added license file support (eula="license.txt" option for install XML)
 SOL -   Added support for <script> sections in options
 SOL -	Added preinstall and postinstall script support
 SOL -   Added web browser launch support (url="http://....")
+SOL -   Added -c command line option to change working directory
 
 Initial Key:
 SOL - Sam Lantinga (hercules@lokigames.com)
